Fix title style to avoid overlapping text

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -219,12 +219,15 @@ div#footer .sponsor {
   box-shadow: 0px 4px 3px #666; */
 }
 
-#page-description {
+#page-description, #curs-page-description {
   display: block;
-  margin: 5px 0px 15px 0px;
-  clear: both;
   text-align: center;
-  width: auto;
+  width: 40%;
+  top: 0px;
+  margin: auto;
+  margin-top: 0px;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 #title-nav {
   position: relative;
@@ -247,12 +250,6 @@ div#footer .sponsor {
   font-size: 120%;
 }
 
-#curs-page-description {
-  font-size: 140%;
-  padding: 7px;
-  display: block;
-  text-align: center;
-}
 #curs-page-description .curs-user-and-reassign {
   font-size: 70%;
 }
@@ -267,9 +264,9 @@ div#footer .sponsor {
 #breadcrumbs {
   margin: 0px;
   clear: both;
+  float: left;
   left: 0px;
   top: 0px;
-  position: absolute;
   font-size: 90%;
   margin-left: -10px;
   white-space: nowrap;
@@ -527,7 +524,7 @@ div.clearall {
 }
 
 .curs-content {
-  margin-top: 10px;
+  margin-top: 2.5em;
 }
 
 .annotation-start {
